--- a/templates/home/vends.html.twig
+++ b/templates/home/vends.html.twig
@@ -42,12 +42,16 @@
         </section>
 
         <section>
-            <div class="row comment-marche-vends mt-3 pb-3 align-items-center">
+            <div class="row comment-marche mt-5 pb-3 align-items-center">
                 <div class="col-12">
-                    <h2 class="primary-title text-left pl-sm-5 ml-sm-5">Comment ça marche ?</h2>
+                    <h2 class="primary-title">Comment vendre ton téléphone ?</h2>
                 </div>
 
-                <div class="col-12">
+                <div class="col-12 col-lg-6 text-center">
+                    <img src="{{ asset('images/video.png') }}" alt="video" class="video">
+                </div>
+
+                <div class="col-12 col-lg-6">
                     <div class="row align-items-center p-2">
                         <div class="col-2 text-right">
                             <img src="{{ asset('images/1.png') }}" alt="1">
@@ -71,35 +75,28 @@
                         <div class="col">
                             Après la création de ton compte
                             <a href="{{ path('show_collect') }}"><span class="explain-text-color">
-                    choisis un point de collecte</span></a>
+                    choisis un mode de collecte</span></a>
                         </div>
                     </div>
+
                     <div class="row align-items-center p-2">
                         <div class="col-2 text-right">
-                            <img src="{{ asset('images/3.png') }}" alt="3">
+                            <img src="{{ asset('images/3.png') }}" alt="4">
                         </div>
                         <div class="col">
-                            Présente-toi au RDV muni de ta pièce d'identité
+                            Notre expert procède à l’effacement de tes données, vérifie ton smartphone,
+                            te fournit un bon de cession et réalise le paiement.
                         </div>
                     </div>
                     <div class="row align-items-center p-2">
                         <div class="col-2 text-right">
-                            <img src="{{ asset('images/4.png') }}" alt="4">
-                        </div>
-                        <div class="col">
-                            Notre expert vérifie ton smartphone, procède à l'effacement de tes données, te
-                            fournit un bon de cession et procède au paiement.
-                        </div>
-                    </div>
-                    <div class="row align-items-center p-2">
-                        <div class="col-2 text-right">
-                            <img src="{{ asset('images/5.png') }}" alt="5">
+                            <img src="{{ asset('images/4.png') }}" alt="5">
                         </div>
                         <div class="col">
                         <span class="explain-text-color">- Récupère ton argent<br>
                         - Fais un don</span> de la valeur de ton tél pour une association<br>
                             <span class="explain-text-color">- Profite d'un bon de réduction</span> sur l'achat
-                            d'un bipbip mobile
+                            d'un BipBip mobile
                         </div>
                     </div>
                     <div class="row align-items-center">
@@ -107,18 +104,19 @@
                             <img src="{{ asset('images/coche.png') }}" alt="Bonne action" class="img-fluid">
                         </div>
                         <div class="col">
-                            Tu as fait une bonne action pour la planète&#8239;!
+                            Tu as fait une bonne action pour ta planète !
                         </div>
                     </div>
                 </div>
             </div>
         </section>
 
+
         <section>
             <div class="row justify-content-center">
                 <div class="col-12 col-sm-8">
 
-                    <h2 class="primary-title-left">Pourquoi&#8239;vendre&#8239;mon&#8239;tél&#8239;à&#8239;BipBip&nbsp;?</h2>
+                    <h2 class="primary-title-left mt-5">Pourquoi&#8239;vendre&#8239;mon&#8239;tél&#8239;à&#8239;BipBip&nbsp;?</h2>
 
                     <p class="text-justify">Vendre ton téléphone à BipBip c'est permettre à une petite entreprise du Nord de se
                         développer. Favoriser l'emploi local chez nous mais aussi chez nos partenaires. C'est aider
