--- a/templates/infos/_form_recrutement.html.twig
+++ b/templates/infos/_form_recrutement.html.twig
@@ -4,21 +4,21 @@
         {{ form_start(form) }}
         <div class="mb-3">
             <p class="border-top p-2 mb-0">
-                Prénom:
+                Prénom
             </p>
             {{ form_widget(form.firstname) }}
         </div>
 
         <div class="mb-3">
             <p class="border-top p-2 mb-0">
-                Nom:
+                Nom
             </p>
             {{ form_widget(form.lastname) }}
         </div>
 
         <div class="mb-3">
             <p class="border-top p-2 mb-0">
-                Email:
+                Email
             </p>
             {{ form_widget(form.email) }}
             {% if errors is defined %}
@@ -28,14 +28,14 @@
 
         <div class="mb-3">
             <p class="border-top p-2 mb-0">
-                Téléphone:
+                Téléphone
             </p>
             {{ form_widget(form.phone) }}
         </div>
 
         <div class="mb-3">
             <p class="border-top p-2 mb-0">
-                Message:
+                Message
             </p>
             {{ form_widget(form.message) }}
         </div>
