--- a/templates/infos/protection.html.twig
+++ b/templates/infos/protection.html.twig
@@ -37,7 +37,7 @@
              </div>
             <div class="flex-column align-items-start mb-4">
                 <p class="mb-1">Comment demander le retrait de mes données ?</p>
-                <small class="text-muted">Tu peux adresser un message à contact@bibip-mobil.fr ou via notre <a href="{{ path('add_message') }}">formulaire de contact</a> afin de demander que tes données soient supprimées de nos serveurs. Les traces des ventes seront toutefois conservées pour une durée de 2 ans en cas de litige (vol ou dysfonctionnement du téléphone).<br>
+                <small class="text-muted">Tu peux adresser un message à contact@bibip-mobile.fr ou via notre <a href="{{ path('add_message') }}">formulaire de contact</a> afin de demander que tes données soient supprimées de nos serveurs. Les traces des ventes seront toutefois conservées pour une durée de 2 ans en cas de litige (vol ou dysfonctionnement du téléphone).<br>
                 Tes données personnelles relatives au bon de cession (vente d'un téléphone) seront supprimées au bout d'une durée de 2 ans.</small>
             </div>
         </div>
