--- a/templates/organisms/index.html.twig
+++ b/templates/organisms/index.html.twig
@@ -11,7 +11,7 @@
 
     <main class="partnersList">
         <h1 class="title-page">
-            <span>Les partenaires</span>
+            <span>Nos partenaires</span>
         </h1>
 
         <section>
