--- a/templates/home/collectorBipers.html.twig
+++ b/templates/home/collectorBipers.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}
-    Collecteur / Bipers
+    Collecteurs / Bipers
 {% endblock %}
 {% block stylesheets %}
     {{ parent() }}
