--- a/templates/infos/recrute.html.twig
+++ b/templates/infos/recrute.html.twig
@@ -4,9 +4,9 @@
 
 {% block body %}
     <main class="container">
-        <h1 class="title-page">Recrutement</h1>
-        <div class="row">
-            <div class="col-12 col-lg-8 mx-auto form p-4 text-center">
+        <h1 class="title-page"><span>Recrutement</span></h1>
+        <div class="d-flex flex-column justify-content-center">
+            <div class="mx-auto form p-4 text-center">
                 <p>
                     BipBip ne recrute pas actuellement.
                 </p>
@@ -18,12 +18,13 @@
                     Nous te recontacterons en cas de besoin.
                 </p>
                 <p>
-                    N’hésite pas à nous suivre sur nos réseaux sociaux pour être alerté si on recrute&#8239;!
+                    N’hésite pas à nous suivre sur nos réseaux sociaux pour être alerté de nos prochains recrutements&#8239;!
                 </p>
             </div>
-            <div class="tenor-gif-embed" data-postid="9561662" data-share-method="host" data-width="100%" data-aspect-ratio="1.7307692307692308">
+            <div class="tenor-gif-embed mx-auto" data-postid="9561662" data-share-method="host" data-width="50%" data-aspect-ratio="1.7307692307692308">
                 <a href="https://tenor.com/view/penguin-job-gif-9561662">Penguin Job GIF</a> from <a href="https://tenor.com/search/penguin-gifs">Penguin GIFs</a>
             </div>
+
             <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
         </div>
 
