--- a/templates/infos/team.html.twig
+++ b/templates/infos/team.html.twig
@@ -78,25 +78,25 @@
                 <h1 class="third-title mt-3 mb-3">Nos accompagnateurs experts</h1>
             </div>
             <div class="col-6 col-sm-6 col-md-3 col-xl-3 text-center">
-                <a href="https://cojt-ebusiness.com/"><img class="for-4 img-fluid m-1" src="{{asset('images/expert-jt.png')}}" alt="expert"></a>
+                <a href="https://cojt-ebusiness.com/" target="_blank"><img class="for-4 img-fluid m-1" src="{{asset('images/expert-jt.png')}}" alt="expert"></a>
                 <p class="mt-3 text-justify">
                     On se rappellera des brainstormings avec Juliette qui ont donné naissance à la marque BipBip
                 </p>
 
             </div>
             <div class="col-6 col-sm-6 col-md-3 col-xl-3 text-center">
-                <a href="https://gd-link.fr/"><img class="for-4 img-fluid m-1" src="{{asset('images/expert-gd-link.png')}}" alt="gd-link"></a>
+                <a href="https://gd-link.fr/" target="_blank"><img class="for-4 img-fluid m-1" src="{{asset('images/expert-gd-link.png')}}" alt="gd-link"></a>
                 <p class="mt-3 text-justify">
                     Aussi énergique que directe, elle va droit au but. Le management et la mode n’ont aucun secret pour elle.
                 </p>
             </div>
             <div class="col-6 col-sm-6 col-md-3 col-xl-3 text-center">
-                <a href="http://www.bo-designgraphic.com/"><img class="for-4 img-fluid m-1" src="{{asset('images/team-Corinne.png')}}" alt="Corinne"></a>
+                <a href="http://www.bo-designgraphic.com/" target="_blank"><img class="for-4 img-fluid m-1" src="{{asset('images/team-Corinne.png')}}" alt="Corinne"></a>
                 <p class="mt-3 text-justify">
                     Aussi détendue que bienveillante, elle est toujours dispo pour donner vie à nos projets.
             </div>
             <div class="col-6 col-sm-6 col-md-3 col-xl-3 text-center">
-                <a href="http://www.lillesagency.com/"><img class="for-4 img-fluid m-1" src="{{asset('images/team-angel.png')}}" alt="Angel"></a>
+                <a href="http://www.lillesagency.com/" target="_blank"><img class="for-4 img-fluid m-1" src="{{asset('images/team-angel.png')}}" alt="Angel"></a>
                 <p class="mt-3 text-justify">Merci à Angèle et à l’agence de développement économique de la MEL pour son soutien et les opportunités offertes à BipBip</p>
             </div>
         </div>
