--- a/templates/infos/_form_recrutement.html.twig
+++ b/templates/infos/_form_recrutement.html.twig
@@ -1,23 +1,23 @@
 <div class="mx-auto mt-5 border bg-light">
-    <h4 class="text-center mt-3 mb-3">Candidature spontanée</h4>
+    <h4 class="text-center mt-3 mb-4">Candidature spontanée</h4>
     <div class="w-75 mx-auto">
         {{ form_start(form) }}
         <div class="mb-3">
-            <p class="border-top p-2 mb-0">
+            <p class="border-top p-2 mb-0 ">
                 Prénom
             </p>
             {{ form_widget(form.firstname) }}
         </div>
 
         <div class="mb-3">
-            <p class="border-top p-2 mb-0">
+            <p class="p-2 mb-0">
                 Nom
             </p>
             {{ form_widget(form.lastname) }}
         </div>
 
         <div class="mb-3">
-            <p class="border-top p-2 mb-0">
+            <p class="p-2 mb-0">
                 Email
             </p>
             {{ form_widget(form.email) }}
@@ -27,14 +27,14 @@
         </div>
 
         <div class="mb-3">
-            <p class="border-top p-2 mb-0">
+            <p class="p-2 mb-0">
                 Téléphone
             </p>
             {{ form_widget(form.phone) }}
         </div>
 
         <div class="mb-3">
-            <p class="border-top p-2 mb-0">
+            <p class="p-2 mb-0">
                 Message
             </p>
             {{ form_widget(form.message) }}
