--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -24,7 +24,7 @@
 
     {% block header %}
         <header>
-            <div class="row pb-3 ">
+            <div class="row pb-1">
                 <div class="col-8 col-sm-12 pt-4 text-center">
                     <a href="{{ path('home') }}" class="logo-title "><img src="{{ asset('/images/logo-bipbip.png') }}"
                                                                           alt="BipBip ton Green Mobile" /></a>
@@ -32,7 +32,7 @@
                 <div class="col-6 col-md-6 col-lg-12">
                     <nav id="menu">
                             <img src="{{ asset('images/close.png') }}" alt="Fermer le menu" class="close-button"/>
-                            <div class="row justify-content-center pl-2 pr-2 pb-5">
+                            <div class="row justify-content-center pl-2 pr-2 pb-1">
                                 <div class="col-12 col-sm-6 col-lg-5 mt-lg-5 text-center">
                                     <div class="row smallLogoMenu align-content-around">
                                         <div class="col">
@@ -70,44 +70,53 @@
                                                 {% endfor %}
                                             <a href="{{ path('app_logout') }}" class="disconnection"> Se déconnecter</a>
 
-                                        {% else %}
-                                            <a href="{{ path('app_login') }}" class="primary-button text-white"> Se connecter</a>
-                                            <a href="{{ path('app_register') }}" class="secondary-button text-white"> S'inscrire</a>
                                         {% endif %}
                                     </div>
+                                    <div class="d-flex flex-column justify-content-center mb-3 mt-3">
+                                    <a href="{{ path('app_login') }}" class="primary-button text-white mb-2 "> Se connecter</a>
+                                    <a href="{{ path('app_register') }}" class="secondary-button text-white"> S'inscrire</a>
+                                    </div>
+
+                                </div>
+
+
+                                <div class="text-menu col-10 mt-1 ml-3 col-sm-6 pl-lg-5 mt-lg-5">
+                                    <ul>
+                                        <li><h3 class="primary-title-menu-black pt-3">BipBip</h3></li>
+                                        <li><a href="{{ path("histoire") }}" title="Notre histoire" class="primary-title-menu">Notre histoire</a></li>
+                                        <li><a href="{{ "/histoire/#solution" }}" title="Notre solution" class="primary-title-menu">Notre solution</a></li>
+                                        <li><a href="{{ path("team") }}" title="Description Bip Bip" class="primary-title-menu">Notre team</a></li>
+                                        <li class="pt-3"><h3 class="primary-title-menu-black">#BipBipAttitude</h3></li>
+                                        <li><a href="{{ path("vends") }}" title="Vends ton téléphone" class="primary-title-menu">Vends ton tél</a></li>
+                                        <li><a href="{{ path("boutique") }}" title="Achète un BipBip" class="primary-title-menu">Achète un BipBip</a></li>
+                                        <li class="pt-3"><h3 class="primary-title-menu-black">BipBip a besoin de toi</h3></li>
+                                        <li><a href="{{ path("bipers") }}" title="Bipers" class="primary-title-menu">Collecteurs / Bipers</a></li>
+                                        <li><a href="{{ path("asso") }}" title="Organiser une collecte" class="primary-title-menu">Devenir un site de collecte</a></li>
+                                        <li><a href="{{ path("organisms_index") }}" title="Nos partenaires" class="primary-title-menu">Nos partenaires</a></li>
+                                        <li><a href="{{ path("add_message") }}" title="Parrain" class="primary-title-menu">Parrain</a></li>
+                                        <li class="pt-3"><h3 class="primary-title-menu-black">Parlons BipBip</h3></li>
+                                        <li><a href="{{ path("add_message") }}" title="Contacte nous" class="primary-title-menu">Contacte nous</a></li>
+                                        <li><a href="{{ path("presse") }}" title="Presse kit" class="primary-title-menu">Notre actu</a></li>
+                                    </ul>
+                                </div>
+                            </div>
+                        <div class="row mb-5">
+                                <div class="col-6 col-sm-10 col-md-8 col-lg-6 text-center">
                                     <div class="laCommuDiv">
                                         <p class="laCommu">
                                             Rejoins la commu'
                                         </p>
                                     </div>
-                                    <div class="">
+                                   <div>
                                         <a href="#"><img src="{{ asset('images/logo-fb.png') }}" class="logoSociaux" alt=""></a>
                                         <a href="#"><img src="{{ asset('images/logo-insta.png') }}" class="logoSociaux" alt=""></a>
                                         <a href="#"><img src="{{ asset('images/logo-linkedin.png') }}" class="logoSociaux" alt=""></a>
                                     </div>
                                 </div>
-
-
-                            <div class="text-menu col-10 mt-1 ml-3 col-sm-6 pl-lg-5 mt-lg-5">
-                                <ul>
-                                    <li><h3 class="primary-title-menu-black pt-3">BipBip</h3></li>
-                                    <li><a href="{{ path("histoire") }}" title="Notre histoire" class="primary-title-menu">Notre histoire</a></li>
-                                    <li><a href="{{ "/histoire/#solution" }}" title="Notre solution" class="primary-title-menu">Notre solution</a></li>
-                                    <li><a href="{{ path("team") }}" title="Description Bip Bip" class="primary-title-menu">Notre team</a></li>
-                                    <li class="pt-3"><h3 class="primary-title-menu-black">#BipBipAttitude</h3></li>
-                                    <li><a href="{{ path("vends") }}" title="Vends ton téléphone" class="primary-title-menu">Vends ton tél</a></li>
-                                    <li><a href="{{ path("boutique") }}" title="Achète un BipBip" class="primary-title-menu">Achète un BipBip</a></li>
-                                    <li class="pt-3"><h3 class="primary-title-menu-black">BipBip a besoin de toi</h3></li>
-                                    <li><a href="{{ path("bipers") }}" title="Bipers" class="primary-title-menu">Collecteurs / Bipers</a></li>
-                                    <li><a href="{{ path("asso") }}" title="Organiser une collecte" class="primary-title-menu">Devenir un site de collecte</a></li>
-                                    <li><a href="{{ path("organisms_index") }}" title="Nos partenaires" class="primary-title-menu">Nos partenaires</a></li>
-                                    <li><a href="{{ path("add_message") }}" title="Parrain" class="primary-title-menu">Parrain</a></li>
-                                    <li class="pt-3"><h3 class="primary-title-menu-black">Parlons BipBip</h3></li>
-                                    <li><a href="{{ path("add_message") }}" title="Contacte nous" class="primary-title-menu">Contacte nous</a></li>
-                                    <li><a href="{{ path("presse") }}" title="Presse kit" class="primary-title-menu">Notre actu</a></li>
-                                </ul>
-
+                            <div class="col-6 text-center">
+                                <a href="{{ path('home') }}"><img class="d-sm-none text-center" src="{{ asset('images/favicon2.png') }}" alt="BipBip" id="phone-menu-icon"/></a>
                             </div>
+                        </div>
                     </nav>
 
                     <div class="circle-buttons">
@@ -124,32 +133,6 @@
                            <button id="haut" onclick="retourHaut()" title="Retour haut de page">
                                <img class="myBtn" src="{{ asset('images/flechejaune.gif') }}" alt="scroll">
                            </button>
-                           {#
-                           <button onclick="topFunction()" title="Go to top">
-                                <img id="myBtn" src="{{ asset('images/flechejaune.gif') }}" alt="scroll">
-                            </button>
-                           #}
-                              {# <script>
-                                mybutton = document.getElementById('myBtn');
-
-                                // When the user scrolls down 20px from the top of the document, show the button
-                                window.onscroll = function() {scrollFunction()};
-
-                                function scrollFunction() {
-                                    if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
-                                        mybutton.style.display = 'block';
-                                    } else {
-                                        mybutton.style.display = 'none';
-                                    }
-                                }
-
-                                // When the user clicks on the button, scroll to the top of the document
-                                function topFunction() {
-                                    document.body.scrollTop = 0; // For Safari
-                                    document.documentElement.scrollTop = 0; // For Chrome, Firefox, IE and Opera
-                                }
-                            </script>
-                                         #}
                        </div>
                     </div>
                 </div>
