--- a/templates/contact/contact.html.twig
+++ b/templates/contact/contact.html.twig
@@ -1,12 +1,13 @@
 {% extends 'base.html.twig' %}
 {% block title %}Contacte-nous !{% endblock %}
 {% block body %}
+    <h1 class="title-page">
+        <span>Contacte-nous</span>
+    </h1>
     <main class="container">
         <div class="row">
             <div class="col-lg-8 col-sm-8 mx-auto p-3">
-                <h1 class="title-page">
-                    <span>Contacte-nous</span>
-                </h1>
+
                 <div class="row align-items-end">
                     <div class="col-12">
                         <p class="text-justify">Salut toi ! Alors comme ça tu veux papoter ?</p>
@@ -18,8 +19,8 @@
                             </a></p>
                     </div>
                     <div class="col-8">
-                        <p>A bientôt,<br>
-                        L'équipe BipBip !</p>
+                        <p>A bientôt</p>
+                        <p>L'équipe BipBip !</p>
                     </div>
                 </div>
             </div>
