--- a/templates/infos/recrute.html.twig
+++ b/templates/infos/recrute.html.twig
@@ -11,7 +11,7 @@
                     BipBip ne recrute pas actuellement.
                 </p>
                 <p>
-                    Tu peux nous laisser ta candidature spontanée avec un CV et une lettre de motivation
+                    Tu peux nous laisser ta candidature spontanée avec un CV et une lettre de motivation (facultative)
                     dans le formulaire de contact <a href="#recrutement"><span class="font-weight-bold">ici</span></a>
                 </p>
                 <p>
