modification css partie video home

--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -531,7 +531,7 @@ header {
     font-size: 3rem;
     color: $primary-color;
 }
-
+/*
 .comment-marche-vends {
     background-color:$fifth-color;
     font-weight: 700;
@@ -545,7 +545,7 @@ header {
         height: auto;
     }
 }
-
+*/
 #tel-collectes {
     height: 200px;
     width: auto;
