--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -52,7 +52,13 @@
                 </div>
 
                 <div class="col-12 col-lg-6 text-center">
-                    <img src="{{ asset('images/video.png') }}" alt="video" class="video">
+                    <iframe width="560"
+                            height="315"
+                            src="https://www.youtube.com/embed/a-IaejaN9Jc"
+                            frameborder="0"
+                            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen>
+                    </iframe>
                 </div>
 
                 <div class="col-12 col-lg-6">
