ajout de l'image bientot disponible sur la page 'achat tel'

--- a/assets/scss/boutique.scss
+++ b/assets/scss/boutique.scss
@@ -9,7 +9,7 @@
 #container{
 
     #infoBipbip{
-        background-image: url("../images/fond.png");
+        background-color: $fifth-color;
         font-weight: bold;
 
         p{
