--- a/templates/boutique/boutique.html.twig
+++ b/templates/boutique/boutique.html.twig
@@ -7,6 +7,11 @@ La boutique BipBip
     {{ encore_entry_link_tags('boutique') }}
 {% endblock %}
 {% block body %}
+    <div class="bientot_dispo row">
+        <div class="col-12 content-img">
+            <img id="" src="{{ asset("/images/Bientot-disponible-bandeau-termine.png") }}" alt="" class="">
+        </div>
+    </div>
 
     <div class="row" id="title">
         <h1 class="title-page">
