--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -546,6 +546,27 @@ header {
     }
 }
 */
+
+.bientot_dispo{
+    position: fixed;
+    z-index: 1;
+
+    .content_image {
+        position: absolute;
+        margin: 0;
+        height: 200px;
+        width: 200px;
+    }
+
+    img {
+        @media screen and (max-width: 992px ){
+            width: 97vw;
+        }
+        width: 65vw;
+        height: 73vh;
+    }
+}
+
 #tel-collectes {
     height: 200px;
     width: auto;
