--- a/templates/home/vends.html.twig
+++ b/templates/home/vends.html.twig
@@ -23,7 +23,11 @@
                 <div class="col-8">
                     <div class="row justify-content-center">
                         <div class="col-12 col-sm-5 text-center">
-                            <p class="primary-button mb-2">via l'appli</p>
+                            <p class="primary-button mb-2"><span>
+                                    <img
+                                        class="position-absolute bientot-dispo"
+                                        src="{{ asset('images/Bientot-disponible-bandeau-termine.png') }}"
+                                        alt="Bientot disponible"></span> via l'appli</p>
                         </div>
                         <div class="col-12 col-sm-5 text-center">
                             <a href="{{ path('new_estimation') }}" class="primary-button">via le site</a>
