--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -52,8 +52,7 @@
                 </div>
 
                 <div class="col-12 col-lg-6 text-center">
-                    <iframe width="560"
-                            height="315"
+                    <iframe class="video"
                             src="https://www.youtube.com/embed/a-IaejaN9Jc"
                             frameborder="0"
                             allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
@@ -103,9 +102,15 @@
                             <img src="{{ asset('images/4.png') }}" alt="5">
                         </div>
                         <div class="col">
-                        <span class="explain-text-color">- Récupère ton argent<br>
-                        - Fais un don</span> de la valeur de ton tél pour une association<br>
-                            <span class="explain-text-color">- Profite d'un bon de réduction</span> sur l'achat
+                            <span class="explain-text-color">- Récupère ton argent</span><br>
+                        - <i class="fas fa-exclamation-circle text-danger">Bientôt disponible</i>
+                            <i class="fas fa-exclamation-circle text-danger"></i>
+                            <span class="explain-text-color">
+                                Fais un don</span> de la valeur de ton tél pour une association<br>
+                            <span class="explain-text-color">
+                                - <i class="fas fa-exclamation-circle text-danger">Bientôt disponible</i>
+                                <i class="fas fa-exclamation-circle text-danger"></i> Profite d'un bon de réduction
+                            </span> sur l'achat
                             d'un BipBip mobile
                         </div>
                     </div>
