--- a/templates/contact/confirmCollect.html.twig
+++ b/templates/contact/confirmCollect.html.twig
@@ -1,6 +1,6 @@
 {% block body %}
     <p>Salut {{ user.firstname }} !</p>
-    <p>confirmons ton inscription à une collecte pour déposer et offir une seconde vie à ton tél.</p>
+    <p>Nous confirmons ton inscription à une collecte pour déposer et offir une seconde vie à ton tél.</p>
     <p>Prends note des lieux et de l'horaire :</p>
     <ul>
         <li>Collecteur : {{ organism.organismName }}</li>
