--- a/templates/home/collectorBipers.html.twig
+++ b/templates/home/collectorBipers.html.twig
@@ -47,14 +47,13 @@
                                 <img
                                         src="{{ asset('images/chronopost.png') }}"
                                         alt="chronopost"
-                                        height="50px"
-                                        width="25%"
+                                        id="chronopost"
                                 >
                             </td>
                             <td class="body_tab text-center">
-                                
+                                <a href="#part-chrono" class="text-info">En savoir plus</a>
                             </td>
-                            <td class="body_tab text-center"></td>
+                            <td class="body_tab text-center">Quand tu veux !</td>
                         </tr>
                         {% for collect in collects %}
                             <tr>
@@ -84,11 +83,14 @@
                                 tabindex="0">
                         </iframe>
                     </div>
-                    <div class="ml-auto mr-auto">
-                        <h4 class="text-center col-6 mx-auto font-weight-bold">
+                    <div class="ml-auto mr-auto mt-3">
+                        <h5 class="text-center col-6 mx-auto font-weight-bold">
                             Tu souhaites proposer un nouveau site de collecte. Clique là !<br>
-                        </h4>
+                        </h5>
                         <a href="{{ path('add_message') }}" class="secondary-button">Propose un lieu<br>ou une date ici !</a>
+                        <h5 class="text-center col-6 mx-auto font-weight-bold mt-5">
+                            Galerie photo<br>
+                        </h5>
                         <div class="content_image mt-5">
                             <a href="/images/photos_1.jpg" target="_blank"><img src="/images/photos_1.jpg" alt="" class="m-1 h-25 w-25"></a>
                             <a href="/images/photos_3.jpg" target="_blank"><img src="/images/photos_3.jpg" alt="" class="m-1 h-25 w-25"></a>
@@ -98,6 +100,67 @@
                 </div>
 
             </div>
+        </div>
+    </div>
+
+    <div id="part-chrono">
+        <h1 class="title-page mt-5">
+            <span>
+                Envoi par Chronopost
+            </span>
+        </h1>
+    </div>
+
+    <div class="container col-10 d-flex flex-wrap justify-content-between mt-5">
+        <p>
+            Tu ne trouves pas de lieu de collecte qui te convient ?
+            Pas de soucis, BipBip te propose d’envoyer ton tél gratuitement sur notre site de rénovation.
+            Tu as pour cela deux choix : tu peux imprimer directement l’étiquette à coller sur le colis
+            ou on t’envoie un QR code à présenter au bureau de poste le plus proche de chez toi.
+
+        </p>
+        <div class="card col-12 col-md-5 mt-2 mb-2 border-dark justify-content-center">
+            <img src="{{ asset('/images/chronopost-colis.png') }}" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title text-center">
+                    CHRONOPOST
+                </h5>
+                <p class="card-text text-center">
+                    BipBip te génère une étiquette à coller sur ton colis ou un QR code pour que ton téléphone
+                    arrive chez nous.
+                </p>
+                <p class="text-center">
+                    <a class="primary-button button-chrono m-auto w-auto" href="#part-chrono">
+                        Envoi<br> par Chronopost
+                    </a>
+                </p>
+            </div>
+        </div>
+        <div class="card col-12 col-md-5 mt-2 mb-2 border-dark justify-content-center">
+            <img src="{{ asset('/images/echange-tel.png') }}" class="card-img-top mt-3" alt="...">
+            <div class="card-body">
+                <h5 class="card-title text-center">
+                    DEPOT
+                </h5>
+                <p class="card-text text-center">
+                    En cliquant sur "Trouver un point de collecte", tu seras redirigé vers
+                    la page te proposant différentes collectes disponibles
+                </p>
+                <p class="text-center">
+                    <a class="primary-button button-chrono m-auto w-auto" href="#collectes">
+                        Trouver un point de collecte
+                    </a>
+                </p>
+            </div>
+        </div>
+
+
+        <div class="col-12">
+            <p class="card-text text-danger text-center font-italic mt-3 mb-5">
+                Le paiement sera
+                effectué lors de la réception du téléphone après validation de l'état indiqué lors de
+                ton estimation.
+            </p>
         </div>
     </div>
 
