menu burger change title

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -91,10 +91,11 @@
                                         <li><a href="{{ path("boutique") }}" title="Achète un BipBip" class="primary-title-menu">Achète un BipBip</a></li>
                                         <li class="pt-3"><h3 class="primary-title-menu-black">BipBip a besoin de toi</h3></li>
                                         <li><a href="{{ path("bipers") }}" title="Bipers" class="primary-title-menu">Collecteurs / Bipers</a></li>
-                                        <li><a href="{{ path("asso") }}" title="Organiser une collecte" class="primary-title-menu">Devenir un site de collecte</a></li>
+                                        <li><a href="{{ path("asso") }}" title="Organiser une collecte" class="primary-title-menu">Nos points de collecte</a></li>
+                                        <li><a href="" title="Site de rénovation et de recyclage" class="primary-title-menu">Sites de rénovation et de recyclage</a></li>
                                         <li><a href="{{ path("organisms_index") }}" title="Nos partenaires" class="primary-title-menu">Nos partenaires</a></li>
-                                        <li><a href="{{ path("add_message") }}" title="Parrain" class="primary-title-menu">Parrain</a></li>
                                         <li class="pt-3"><h3 class="primary-title-menu-black">Parlons BipBip</h3></li>
+                                        <li><a href="{{ path("add_message") }}" title="Parrain" class="primary-title-menu">Notre système de parrainage</a></li>
                                         <li><a href="{{ path("add_message") }}" title="Contacte nous" class="primary-title-menu">Contacte nous</a></li>
                                         <li><a href="{{ path("presse") }}" title="Presse kit" class="primary-title-menu">Notre actu</a></li>
                                     </ul>
