--- a/templates/includeForm.html.twig
+++ b/templates/includeForm.html.twig
@@ -23,12 +23,16 @@
         {{ form_widget(form.message, {'attr': {'class': 'form-control mt-3 mb-3',
             'placeholder': 'Message (10 caractères minimum)', 'label': 'Message', 'required': true}}) }}
     </div>
+    <div class="offset-sm-2 col-sm-8 offset-sm-2 upload">
+        {{ form_widget(form.upload, {'attr': {'class': 'form-control mt-3 mb-3',
+            'placeholder': 'Si besoin d\'ajouter un document', 'label': 'upload', 'required': false}}) }}
+    </div>
     <div class="offset-sm-2 col-sm-8 offset-sm-2 form-text text-muted">
         {{ form_row(form.agreeTerms, {'label': 'Aucune donnée personnelle n\’est conservée par notre site via
                 ce formulaire, mais tu acceptes que BipBip te recontacte afin de répondre à ta demande.', 'required': true}) }}
     </div>
     <div class="offset-sm-2 col-sm-8 offset-sm-2">
-        {{ form_row(form.save, {'label': 'Envoyer le message', 'attr': {'class': 'fourth-button'}}) }}
+        {{ form_row(form.save, {'label': 'Envoyer le message', 'attr': {'class': 'fourth-button mx-auto'}}) }}
     </div>
     {{ form_end(form) }}
 
