--- a/templates/bdc/index.html.twig
+++ b/templates/bdc/index.html.twig
@@ -10,7 +10,7 @@
         </div>
         <div>
             <p class="text-center text-danger">
-                Pour faire une recherche, faite ctrl/F.
+                Pour faire une recherche, faites CTRL+F.
             </p>
         </div>
         <div class="row bg-info align-items-center">
