--- a/templates/home/constat.html.twig
+++ b/templates/home/constat.html.twig
@@ -27,7 +27,7 @@
                  alt="17 incubateurs / accélérateurs de startup dansles Hauts de France"
                  class="img-fluid img-constat">
             <p>
-                <span class="accroche_primaire"><span class="mot_cle">+ de 660</span><br>  start-Ups innovantes</span> et qui souhaitent se développer dans notre région
+                <span class="accroche_primaire"><span class="mot_cle">+ de 660</span><br>  start-ups innovantes</span> et qui souhaitent se développer dans notre région
             </p>
         </div>
     </div>
