--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -122,10 +122,9 @@
                 <div class="col-6 offset-sm-2 col-sm-3 text-right">
                     <img src="{{ asset('images/phones-vert-rouge.png') }}" alt="Téléphones collectés" class="img-phone">
                 </div>
-                <div class="col-6 col-sm-7 text-center">
+                <div class="col-6 col-sm-7 text-center mt-3">
                     <p class="recolted-number pt-2">1520</p>
-                    <p class="recolted-text">téléphones<br>collectés<br> par nos
-                        <span class="font-weight-bold">bipers</span>
+                    <p class="recolted-text">téléphones<br>collectés
                     </p>
                 </div>
             </div>
