--- a/templates/organisms/new.html.twig
+++ b/templates/organisms/new.html.twig
@@ -13,7 +13,7 @@
     <h1 class="primary-title">Ajouter un partenaire</h1>
 
     {{ include('organisms/_form.html.twig') }}
-    <button class="secondary-button add">Ajouter</button>
+    <button class="secondary-button add text-center">Ajouter</button>
     {{ form_end(form) }}
 
     <a class="secondary-button back" id="newLink" href="{{ path('admin_organisms_index') }}">Retour à la liste</a>
