--- a/templates/bonsplans/index.html.twig
+++ b/templates/bonsplans/index.html.twig
@@ -6,7 +6,7 @@
     <main class="container">
         <div class="row">
             <div class="col-12 col-lg-8 mx-auto form p-4">
-                <h1 class="title-page">Les bons plans</h1>
+                <h1 class="title-page"><span>Les bons plans</span></h1>
                 <p class="text-center mt-5">BipBip déniche pour toi les bons plans de ta région. grâce à son réseau partenaire,
                     il te propose des réductions exclusives, des avant-premières et des soirées VIP</p>
             </div>
