correction du userEditType pour afficher uniquement les organisme privé dans les choix

--- a/templates/infos/team.html.twig
+++ b/templates/infos/team.html.twig
@@ -51,6 +51,8 @@
             <div class="col-6 col-sm-6 col-lg-4 col-xl-4 text-center">
                 <img class="for-4 img-fluid" src="{{asset('images/team-clement.png')}}" alt="Clement">
                 <p class="m-3 text-justify">
+                    Ne jamais se fier aux apparences de son jeune âge, il a déjà les compétences pour mener à bien un projet.
+                    Calme, détendu et conscencieux il affine son travail afin de répondre au mieux à chaque circonstance.
                 </p>
             </div>
             <div class="col-6 col-sm-6 col-lg-4 col-xl-4 text-center">
