--- a/templates/home/collectorBipers.html.twig
+++ b/templates/home/collectorBipers.html.twig
@@ -74,8 +74,8 @@
                     <div class="mx-auto">
                         <iframe
                                 src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d20220.479443764885!2d3.0689462!3d50.69099309999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sfr!2sfr!4v1592993614866!5m2!1sfr!2sfr"
-                                width="600"
-                                height="450"
+                                width="auto"
+                                height="400"
                                 frameborder="0"
                                 style="border:0;"
                                 allowfullscreen=""
