--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -27,15 +27,10 @@
             </div>
         </section>
 
-        <div class="row pl-3 pr-3 pt-3 header align-items-center">
-            <div class="col-7 d-md-none p-3 text-center">
-                <img src="{{ asset('images/bipbiprachete.png') }}"
-                     alt="BipBip rachète ton tél et en fait le premier mobile recyclé et connecté aux bons plans de ta région"
-                     class="img-fluid">
-            </div>
-            <div class="d-none d-md-block col-md-9 p-3 text-center">
-                <h1><span class="font-weight-bold">BipBip</span> rachète ton tél et en fait</h1>
-                <h2 class="text-info font-weight-bold">LE 1er MOBILE RECYCLÉ ET CONNECTÉ</h2>
+        <div class="row pl-3 pr-3 pt-3 header justify-content-sm-between mx-auto align-items-center">
+            <div class="d-sm-block col-7 p-3 text-center">
+                <h1 class="text-info font-weight-bold"><span class="font-weight-bold">BipBip</span> RACHÈTE TON TÉL ET EN FAIT</h1>
+                <h2 class="">LE 1er MOBILE RECYCLÉ ET CONNECTÉ</h2>
                 <H2 class="text-success font-weight-bold">AUX BONS PLANS DE TA RÉGION</H2>
             </div>
             <div class="col-5 col-md-3 p-3">
@@ -51,13 +46,6 @@
                     <h2 class="primary-title">Comment vendre ton téléphone ?</h2>
                 </div>
 
-<<<<<<< HEAD
-                <div class="col-12 col-md-12 col-lg-6 text-center">
-                  <img src="{{ asset('images/video.png') }}" alt="video" class="video">
-                </div>
-
-                <div class="col-12 col-md-12 col-lg-6">
-=======
                 <div class="col-12 col-lg-6 text-center">
                     <iframe class="video"
                             src="https://www.youtube.com/embed/a-IaejaN9Jc"
@@ -68,7 +56,6 @@
                 </div>
 
                 <div class="col-12 col-lg-6">
->>>>>>> ef608c9607771a44774d37357c278f28c4f1e9ca
                     <div class="row align-items-center p-2">
                         <div class="col-2 text-right">
                             <img src="{{ asset('images/1.png') }}" alt="1">
