--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -90,7 +90,7 @@
                                         <li><a href="{{ path("vends") }}" title="Vends ton téléphone" class="primary-title-menu">Vends ton tél</a></li>
                                         <li><a href="{{ path("boutique") }}" title="Achète un BipBip" class="primary-title-menu">Achète un BipBip</a></li>
                                         <li class="pt-3"><h3 class="primary-title-menu-black">BipBip a besoin de toi</h3></li>
-                                        <li><a href="" title="" class="primary-title-menu">Who's who</a></li>
+                                        <li><a href="{{ path("who") }}" title="who" class="primary-title-menu">Who's who</a></li>
                                         <li><a href="{{ path("bipers") }}" title="Bipers" class="primary-title-menu">Nos points de collecte</a></li>
                                         <li><a href="" title="Site de rénovation et de recyclage" class="primary-title-menu">Sites de rénovation et de recyclage</a></li>
                                         <li><a href="{{ path("organisms_index") }}" title="Nos partenaires" class="primary-title-menu">Nos partenaires</a></li>
