--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -738,4 +738,11 @@ footer {
             color: black;
         }
     }
+    // reno
+
+    .reno{
+        background-color: red;
+        font-size: 1.2rem;
+        line-height: 1.4rem;
+    }
 }
