--- a/templates/collects/whos_who.html.twig
+++ b/templates/collects/whos_who.html.twig
@@ -35,7 +35,7 @@
 
     <h1 class="title-page"><span>Nos Collecteurs experts</span></h1>
     <section>
-
+        {% include('home/include_galerie.html.twig') %}
     </section>
 </main>
 {% endblock %}
