--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -92,7 +92,7 @@
                                         <li class="pt-3"><h3 class="primary-title-menu-black">BipBip a besoin de toi</h3></li>
                                         <li><a href="{{ path("who") }}" title="who" class="primary-title-menu">Who's who</a></li>
                                         <li><a href="{{ path("bipers") }}" title="Bipers" class="primary-title-menu">Nos points de collecte</a></li>
-                                        <li><a href="" title="Site de rénovation et de recyclage" class="primary-title-menu">Sites de rénovation et de recyclage</a></li>
+                                        <li><a href="{{ path("reno") }}" title="Site de rénovation et de recyclage" class="primary-title-menu">Sites de rénovation et de recyclage</a></li>
                                         <li><a href="{{ path("organisms_index") }}" title="Nos partenaires" class="primary-title-menu">Nos partenaires</a></li>
                                         <li class="pt-3"><h3 class="primary-title-menu-black">Parlons BipBip</h3></li>
                                         <li><a href="{{ path("add_message") }}" title="Contacte nous" class="primary-title-menu">Contacte nous</a></li>
