modification image bientot disponible sur le boutton 'appli' pour faire l'estimation

--- a/templates/home/vends.html.twig
+++ b/templates/home/vends.html.twig
@@ -25,8 +25,8 @@
                         <div class="col-12 col-sm-5 text-center">
                             <p class="primary-button mb-2"><span>
                                     <img
-                                        class="position-absolute bientot-dispo"
-                                        src="{{ asset('images/Bientot-disponible-bandeau-termine.png') }}"
+                                        class="position-absolute w-50 h-100 bientot-dispo"
+                                        src="{{ asset('images/Bientot-disponible.png') }}"
                                         alt="Bientot disponible"></span> via l'appli</p>
                         </div>
                         <div class="col-12 col-sm-5 text-center">
