changement des images grade telephone, query pour appliquer image en portrait ou paysage

--- a/templates/infos/grade.html.twig
+++ b/templates/infos/grade.html.twig
@@ -16,8 +16,11 @@
                 </p>
             </div>
 
-            <div class="w-100">
-                <img class="img-fluid w-100 mt-3" src="{{ asset('images/BipBip_grade.png') }}" alt="">
+            <div class="grade_paysage w-100">
+                <img class="img-fluid w-100 mt-3" src="{{ asset('images/grade-telephone-Paysage-FB.jpg') }}" alt="">
+            </div>
+            <div class="grade_portrait w-100">
+                <img class="img-fluid w-100 mt-3" src="{{ asset('images/grade-telephone-portrait-FB.jpg') }}" alt="">
             </div>
             <div class="mt-3">
                 <p>
