--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -271,6 +271,17 @@ a{
     }
 }
 
+.grade_paysage{
+    @media screen and (max-width: 768px){
+        display: none;
+    }
+}
+
+.grade_portrait{
+    @media screen and (min-width: 768px){
+        display: none;
+    }
+}
 // Pour retourner la flèche du top haut vers le haut
 .revert {
     transform: rotate(3.1416rad);
