--- a/templates/collects/whos_who.html.twig
+++ b/templates/collects/whos_who.html.twig
@@ -12,12 +12,12 @@
 
     <h1 class="title-page"><span>Who's who</span></h1>
     <section>
-    <div class="d-flex flex-wrap justify-content-around mb-5 mt-5">
+    <div class="d-flex flex-wrap justify-content-between mb-5 mt-5">
         <div class="giver ">
            <img class="img-top" src="{{ asset('images/GiverAv.png') }}" alt="Givers_front">
         </div>
-        <div class="collecteur">
-            <img class="img-top" src="{{ asset('images/CollecteurAv.png') }}" alt="Collecteurs">
+        <div class="collecteurs">
+            <img class="img-top" src="{{ asset('images/CollecteursAv.png') }}" alt="Collecteurs">
         </div>
           <div class="partenaire">
                 <img class="img-top" src="{{ asset('images/PartenaireAv.png') }}" alt="Partenaires">
