--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -184,7 +184,6 @@
     // Who's who
     .giver {
             background-repeat: no-repeat;
-            background-color: white;
         .img-top:hover{
             visibility: hidden;
         }
@@ -195,22 +194,20 @@
             transition: background-image 0.01s;
         }
 
-        .collecteur {
+        .collecteurs {
             background-repeat: no-repeat;
-            background-color: white;
             .img-top:hover{
                 visibility: hidden;
         }
     }
-        .collecteur:hover {
-            background-image: url("../../public/images/CollecteurArr.png");
+        .collecteurs:hover {
+            background-image: url("../../public/images/CollecteursArr.png");
             background-repeat: no-repeat;
             transition: background-image 0.01s;
         }
 
         .partenaire {
             background-repeat: no-repeat;
-            background-color: white;
             .img-top:hover{
                 visibility: hidden;
             }
@@ -223,7 +220,6 @@
 
         .biper {
             background-repeat: no-repeat;
-            background-color: white;
             .img-top:hover{
                 visibility: hidden;
             }
