--- a/templates/contact/sentMailExpRecruit.html.twig
+++ b/templates/contact/sentMailExpRecruit.html.twig
@@ -1,6 +1,6 @@
 {% block body %}
     <p>Bonjour,</p>
-    <p>Merci pour votre candidature, nous vous contacterons dans les plus bref délai afin de vous apporter une réponse.</p>
+    <p>Merci pour ta candidature, nous te contacterons dans les plus brefs délais afin de t'apporter une réponse.</p>
     <ul>
         <li>Auteur : {{ form['firstname'] }} {{ form['lastname'] }}</li>
         <li>Mail : {{ form['email'] }}</li>
@@ -10,9 +10,9 @@
         {{ form['message'] }}</p>
 
     <p>--<br>
-        Il est inutile de répondre à ce message, une réponse vous sera adressée rapidement par l'équipe bipBip.
+       Ce message est envoyé automatiquement, merci de ne pas y répondre.
     </p>
     <p>
-        BipBip vous remercie pour l'intention que vous lui portez.
+        BipBip te remercie pour l'intérêt que tu lui portes.
     </p>
 {% endblock %}
